--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -38,7 +38,8 @@
           "valve_entity_id": "1ère valve number",
           "valve_entity2_id": "2ème valve number",
           "valve_entity3_id": "3ème valve number",
-          "valve_entity4_id": "4ème valve number"
+          "valve_entity4_id": "4ème valve number",
+          "auto_regulation_mode": "Auto-regulation"
         },
         "data_description": {
           "heater_entity_id": "Entity id du 1er radiateur obligatoire",
@@ -54,7 +55,8 @@
           "valve_entity_id": "Entity id de la 1ère valve",
           "valve_entity2_id": "Entity id de la 2ème valve",
           "valve_entity3_id": "Entity id de la 3ème valve",
-          "valve_entity4_id": "Entity id de la 4ème valve"
+          "valve_entity4_id": "Entity id de la 4ème valve",
+          "auto_regulation_mode": "Ajustement automatique de la consigne"
         }
       },
       "tpi": {
@@ -197,10 +199,11 @@
           "climate_entity3_id": "3ème thermostat sous-jacent",
           "climate_entity4_id": "4ème thermostat sous-jacent",
           "ac_mode": "AC mode ?",
-          "valve_entity_id": "1ère valve number",
-          "valve_entity2_id": "2ème valve number",
-          "valve_entity3_id": "3ème valve number",
-          "valve_entity4_id": "4ème valve number"
+          "valve_entity_id": "1ère valve",
+          "valve_entity2_id": "2ème valve",
+          "valve_entity3_id": "3ème valve",
+          "valve_entity4_id": "4ème valve",
+          "auto_regulation_mode": "Auto-regulation"
         },
         "data_description": {
           "heater_entity_id": "Entity id du 1er radiateur obligatoire",
@@ -216,7 +219,8 @@
           "valve_entity_id": "Entity id de la 1ère valve",
           "valve_entity2_id": "Entity id de la 2ème valve",
           "valve_entity3_id": "Entity id de la 3ème valve",
-          "valve_entity4_id": "Entity id de la 4ème valve"
+          "valve_entity4_id": "Entity id de la 4ème valve",
+          "auto_regulation_mode": "Ajustement automatique de la consigne"
         }
       },
       "tpi": {
@@ -330,6 +334,12 @@
         "thermostat_over_climate": "Thermostat sur un autre thermostat",
         "thermostat_over_valve": "Thermostat sur une valve"
       }
+    },
+    "auto_regulation_mode": {
+      "auto_regulation_strong": "Forte",
+      "auto_regulation_medium": "Moyenne",
+      "auto_regulation_light": "Légère",
+      "auto_regulation_none": "Aucune"
     }
   },
   "entity": {
