--- a/custom_components/versatile_thermostat/translations/sk.json
+++ b/custom_components/versatile_thermostat/translations/sk.json
@@ -326,7 +326,7 @@
     "thermostat_type": {
       "options": {
         "thermostat_over_switch": "Termostat nad spínačom",
-        "thermostat_over_climate": "Termostat nad iným termostatom"
+        "thermostat_over_climate": "Termostat nad iným termostatom",
         "thermostat_over_valve": "Thermostat over a valve"
       }
     }
