Feature #129 add auto regulation for over climate (#148)
* Algo implementation and tests
---------

Co-authored-by: Jean-Marc Collin <jean-marc.collin-extern@renault.com>

--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -38,7 +38,10 @@
           "valve_entity_id": "1ère valve number",
           "valve_entity2_id": "2ème valve number",
           "valve_entity3_id": "3ème valve number",
-          "valve_entity4_id": "4ème valve number"
+          "valve_entity4_id": "4ème valve number",
+          "auto_regulation_mode": "Auto-régulation",
+          "auto_regulation_dtemp": "Seuil de régulation",
+          "auto_regulation_periode_min": "Période minimale de régulation"
         },
         "data_description": {
           "heater_entity_id": "Entity id du 1er radiateur obligatoire",
@@ -54,7 +57,10 @@
           "valve_entity_id": "Entity id de la 1ère valve",
           "valve_entity2_id": "Entity id de la 2ème valve",
           "valve_entity3_id": "Entity id de la 3ème valve",
-          "valve_entity4_id": "Entity id de la 4ème valve"
+          "valve_entity4_id": "Entity id de la 4ème valve",
+          "auto_regulation_mode": "Ajustement automatique de la température cible",
+          "auto_regulation_dtemp": "Le seuil en ° au-dessous duquel la régulation ne sera pas envoyée",
+          "auto_regulation_periode_min": "La durée en minutes entre deux mise à jour faites par la régulation"
         }
       },
       "tpi": {
@@ -197,10 +203,13 @@
           "climate_entity3_id": "3ème thermostat sous-jacent",
           "climate_entity4_id": "4ème thermostat sous-jacent",
           "ac_mode": "AC mode ?",
-          "valve_entity_id": "1ère valve number",
-          "valve_entity2_id": "2ème valve number",
-          "valve_entity3_id": "3ème valve number",
-          "valve_entity4_id": "4ème valve number"
+          "valve_entity_id": "1ère valve",
+          "valve_entity2_id": "2ème valve",
+          "valve_entity3_id": "3ème valve",
+          "valve_entity4_id": "4ème valve",
+          "auto_regulation_mode": "Auto-regulation",
+          "auto_regulation_dtemp": "Seuil de régulation",
+          "auto_regulation_periode_min": "Période minimale de régulation"
         },
         "data_description": {
           "heater_entity_id": "Entity id du 1er radiateur obligatoire",
@@ -216,7 +225,10 @@
           "valve_entity_id": "Entity id de la 1ère valve",
           "valve_entity2_id": "Entity id de la 2ème valve",
           "valve_entity3_id": "Entity id de la 3ème valve",
-          "valve_entity4_id": "Entity id de la 4ème valve"
+          "valve_entity4_id": "Entity id de la 4ème valve",
+          "auto_regulation_mode": "Ajustement automatique de la consigne",
+          "auto_regulation_dtemp": "Le seuil en ° au-dessous duquel la régulation ne sera pas envoyée",
+          "auto_regulation_periode_min": "La durée en minutes entre deux mise à jour faites par la régulation"
         }
       },
       "tpi": {
@@ -329,6 +341,14 @@
         "thermostat_over_switch": "Thermostat sur un switch",
         "thermostat_over_climate": "Thermostat sur un autre thermostat",
         "thermostat_over_valve": "Thermostat sur une valve"
+      }
+    },
+    "auto_regulation_mode": {
+      "options": {
+        "auto_regulation_strong": "Forte",
+        "auto_regulation_medium": "Moyenne",
+        "auto_regulation_light": "Légère",
+        "auto_regulation_none": "Aucune"
       }
     }
   },
