--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -41,7 +41,8 @@
           "valve_entity4_id": "4ème valve number",
           "auto_regulation_mode": "Auto-régulation",
           "auto_regulation_dtemp": "Seuil de régulation",
-          "auto_regulation_periode_min": "Période minimale de régulation"
+          "auto_regulation_periode_min": "Période minimale de régulation",
+          "inverse_switch_command": "Inverser la commande"
         },
         "data_description": {
           "heater_entity_id": "Entity id du 1er radiateur obligatoire",
@@ -60,7 +61,8 @@
           "valve_entity4_id": "Entity id de la 4ème valve",
           "auto_regulation_mode": "Ajustement automatique de la température cible",
           "auto_regulation_dtemp": "Le seuil en ° au-dessous duquel la régulation ne sera pas envoyée",
-          "auto_regulation_periode_min": "La durée en minutes entre deux mise à jour faites par la régulation"
+          "auto_regulation_periode_min": "La durée en minutes entre deux mise à jour faites par la régulation",
+          "inverse_switch_command": "Inverse la commande du switch pour une installation avec fil pilote et diode"
         }
       },
       "tpi": {
@@ -209,7 +211,8 @@
           "valve_entity4_id": "4ème valve",
           "auto_regulation_mode": "Auto-regulation",
           "auto_regulation_dtemp": "Seuil de régulation",
-          "auto_regulation_periode_min": "Période minimale de régulation"
+          "auto_regulation_periode_min": "Période minimale de régulation",
+          "inverse_switch_command": "Inverser la commande"
         },
         "data_description": {
           "heater_entity_id": "Entity id du 1er radiateur obligatoire",
@@ -228,7 +231,8 @@
           "valve_entity4_id": "Entity id de la 4ème valve",
           "auto_regulation_mode": "Ajustement automatique de la consigne",
           "auto_regulation_dtemp": "Le seuil en ° au-dessous duquel la régulation ne sera pas envoyée",
-          "auto_regulation_periode_min": "La durée en minutes entre deux mise à jour faites par la régulation"
+          "auto_regulation_periode_min": "La durée en minutes entre deux mise à jour faites par la régulation",
+          "inverse_switch_command": "Inverse la commande du switch pour une installation avec fil pilote et diode"
         }
       },
       "tpi": {
