--- a/custom_components/versatile_thermostat/translations/it.json
+++ b/custom_components/versatile_thermostat/translations/it.json
@@ -39,7 +39,8 @@
           "valve_entity2_id": "Secondo valvola numero",
           "valve_entity3_id": "Terzo valvola numero",
           "valve_entity4_id": "Quarto valvola numero",
-          "auto_regulation_mode": "Autoregolamentazione"
+          "auto_regulation_mode": "Autoregolamentazione",
+          "inverse_switch_command": "Comando inverso"
         },
         "data_description": {
           "heater_entity_id": "Entity id obbligatoria del primo riscaldatore",
@@ -56,7 +57,8 @@
           "valve_entity2_id": "Entity id del secondo valvola numero",
           "valve_entity3_id": "Entity id del terzo valvola numero",
           "valve_entity4_id": "Entity id del quarto valvola numero",
-          "auto_regulation_mode": "Regolazione automatica della temperatura target"
+          "auto_regulation_mode": "Regolazione automatica della temperatura target",
+          "inverse_switch_command": "Inverte il controllo dell'interruttore per un'installazione con filo pilota e diodo"
         }
       },
       "tpi": {
@@ -195,7 +197,8 @@
           "valve_entity2_id": "Secondo valvola numero",
           "valve_entity3_id": "Terzo valvola numero",
           "valve_entity4_id": "Quarto valvola numero",
-          "auto_regulation_mode": "Autoregolamentazione"
+          "auto_regulation_mode": "Autoregolamentazione",
+          "inverse_switch_command": "Comando inverso"
         },
         "data_description": {
           "heater_entity_id": "Entity id obbligatoria del primo riscaldatore",
@@ -212,7 +215,8 @@
           "valve_entity2_id": "Entity id del secondo valvola numero",
           "valve_entity3_id": "Entity id del terzo valvola numero",
           "valve_entity4_id": "Entity id del quarto valvola numero",
-          "auto_regulation_mode": "Autoregolamentazione"
+          "auto_regulation_mode": "Autoregolamentazione",
+          "inverse_switch_command": "Inverte il controllo dell'interruttore per un'installazione con filo pilota e diodo"
         }
       },
       "tpi": {
